tests/transpiler/x/zig/group_by_left_join.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/group_by_left_join.zig:15:23: error: unable to infer array size
